--- a/integration-tests/elytron-security-oauth2/pom.xml
+++ b/integration-tests/elytron-security-oauth2/pom.xml
@@ -62,6 +62,10 @@
                     <groupId>org.opentest4j</groupId>
                     <artifactId>opentest4j</artifactId>
                 </exclusion>
+                <exclusion>
+    	            <groupId>com.google.code.findbugs</groupId>
+                    <artifactId>jsr305</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
