--- a/extensions/spring-cloud-config-client/runtime/pom.xml
+++ b/extensions/spring-cloud-config-client/runtime/pom.xml
@@ -46,6 +46,7 @@
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock-jre8</artifactId>
+            <version>2.26.3</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -59,6 +60,10 @@
                 <exclusion>
                     <groupId>org.checkerframework</groupId>
                     <artifactId>checker-qual</artifactId>
+                </exclusion>
+                <exclusion> <!-- fix dependencyConvergence clash with junit-jupiter -->
+                    <groupId>org.opentest4j</groupId>
+                    <artifactId>opentest4j</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
