--- a/integration-tests/elytron-security-oauth2/pom.xml
+++ b/integration-tests/elytron-security-oauth2/pom.xml
@@ -43,6 +43,7 @@
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock-jre8</artifactId>
+            <version>2.26.3</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -56,6 +57,10 @@
                 <exclusion>
                     <groupId>org.checkerframework</groupId>
                     <artifactId>checker-qual</artifactId>
+                </exclusion>
+                <exclusion> <!-- fix dependencyConvergence clash with junit-jupiter -->
+                    <groupId>org.opentest4j</groupId>
+                    <artifactId>opentest4j</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
