--- a/integration-tests/vault/src/test/resources/application-vault-approle-wrap.properties
+++ b/integration-tests/vault/src/test/resources/application-vault-approle-wrap.properties
@@ -1,8 +1,8 @@
 quarkus.vault.url=https://localhost:8200
 
-# role-id & secret-id provided by VaultTestLifecycleManager
+# role-id & secret-id-wrapping-token provided by VaultTestLifecycleManager
 quarkus.vault.authentication.app-role.role-id=${vault-test.role-id}
-quarkus.vault.authentication.app-role.secret-id=${vault-test.secret-id}
+quarkus.vault.authentication.app-role.secret-id-wrapping-token=${vault-test.secret-id-wrapping-token}
 
 #quarkus.vault.tls.skip-verify=true
 quarkus.vault.tls.ca-cert=src/test/resources/vault-tls.crt
