--- a/build-parent/pom.xml
+++ b/build-parent/pom.xml
@@ -295,8 +295,10 @@
                                             <!-- Ban checker-qual, we don't use Checker Framework -->
                                             <exclude>org.checkerframework:checker-qual</exclude>
                                             <exclude>com.google.code.findbugs:jsr305</exclude>
+                                            <!-- We use our own impl here, including this one causes problems-->
+                                            <exclude>org.jboss.resteasy:resteasy-context-propagation</exclude>
                                         </excludes>
-                                        <includes>
+                                        <includes>a
                                             <!-- this is for REST Assured -->
                                             <include>jakarta.xml.bind:jakarta.xml.bind-api:*:*:test</include>
                                         </includes>
