Add skip parameter to ValidateExtensionsJsonMojo

--- a/integration-tests/maven/pom.xml
+++ b/integration-tests/maven/pom.xml
@@ -79,6 +79,7 @@
                             <goal>validate-extensions-json</goal>
                         </goals>
                         <configuration>
+                            <skip>${skipTests}</skip>
                             <jsonGroupId>io.quarkus</jsonGroupId>
                             <jsonArtifactId>quarkus-bom-descriptor-json</jsonArtifactId>
                             <jsonVersion>${project.version}</jsonVersion>
