--- a/build-parent/pom.xml
+++ b/build-parent/pom.xml
@@ -298,7 +298,7 @@
                                             <!-- We use our own impl here, including this one causes problems-->
                                             <exclude>org.jboss.resteasy:resteasy-context-propagation</exclude>
                                         </excludes>
-                                        <includes>a
+                                        <includes>
                                             <!-- this is for REST Assured -->
                                             <include>jakarta.xml.bind:jakarta.xml.bind-api:*:*:test</include>
                                         </includes>
