--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -429,6 +429,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-panache-mock</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-panacheql</artifactId>
                 <version>${project.version}</version>
             </dependency>
